Fix for tags overlapping divider line issue in "Filter by product category"
Issue fixed where tags are overlapping divider line in "Filter by product category".

--- a/plugins/woocommerce-blocks/assets/js/editor-components/search-list-control/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/editor-components/search-list-control/style.scss
@@ -83,7 +83,6 @@
 		list-style: none;
 		margin: 0;
 		padding: 0;
-		overflow: hidden;
 
 		li {
 			float: left;
@@ -95,6 +94,7 @@
 	margin: $gap 0;
 	padding: $gap 0 0;
 	border-top: 1px solid $gray-100;
+	clear: both;
 
 	.components-base-control__field {
 		margin-bottom: $gap;
